Fixed service_autocomplete z-index errors. Improved modal appearance

--- a/core/services/service_autocomplete/css/service_autocomplete.less
+++ b/core/services/service_autocomplete/css/service_autocomplete.less
@@ -21,7 +21,7 @@
 		// top: 100%;
 		// width: 100%;
 		min-width: 12rem;
-		z-index: 4;
+		z-index: 3;
 
 		// hide wrapper_service_autocomplete when parent element .component_portal is not .active
 		// .wrapper_component:not(.active) & {
